--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,11 @@
 <!-- Navigation -->
 
 <div class="jumbotron-main">
-
     <span>
-        <h1 class="main-h1"> QUALIFY FOR A CLINICAL TRIAL. 
-        <p class="what-is-sci"><strong>CONNECTING YOU TO LIFE CHANGING TREATMENTS!</strong></p>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">SEE IF YOU QUALIFY</a>
+    
+        <h1 class="main-h1"> CESARCELLS 
+        <p class="what-is-sci"><strong>LIFE CHANGING STARGARDT TREATMENTS!</strong></p>
+            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a>
         </h1> 
         
         
@@ -13,7 +13,7 @@
 </div>
 <div class="row" id="main-row-sect">
     <div class="container-lg">
-        <span class="img-spans-main"> 
+        {{!-- <span class="img-spans-main"> 
         <img class="img-responsive center-block" src="https://cdn3.iconfinder.com/data/icons/medical-2-1/512/scientist-512.png">   
         </span>
         <span class="img-spans-main"> 
@@ -33,7 +33,7 @@
         </span>
         <span class="img-spans-main"> 
         <img class="img-responsive center-block" src="https://cdn0.iconfinder.com/data/icons/activities-glyph/2048/2131_-_Doctor-512.png">   
-        </span>
+        </span> --}}
     <div>
 <div>
     <div class="container">
@@ -51,7 +51,7 @@
                We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
                 </p> <br>
                 <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn More About Us</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
             
             </div>
         </div>
