--- a/views/users/details_new.handlebars
+++ b/views/users/details_new.handlebars
@@ -31,7 +31,7 @@
   Enter your Birthday<br>
   <input type="date" name="bday" id="inputBirthday" class="form-control" required="true"><br><br>
 
-  Have you been diagnosed with Stargardts?<br>
+  Have you been diagnosed with Stargardt disease?<br>
   <select name="diagnosedSelect" required>
       <option value=""></option>
       <option value="true">Yes</option>
