--- a/views/layouts/dash.handlebars
+++ b/views/layouts/dash.handlebars
@@ -18,6 +18,8 @@
 <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
 <script src="/js/jquery.js" type="text/javascript"></script>
+<script src="/js/amsler-tabs.js" type="text/javascript"></script>
+
 <script src="/js/scripts/assessment_questions.js" type="text/javascript"></script>
 <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <!-- <script src="/data/stargardtsQuestions.js" type="text/javascript"></script> -->
