--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -2,6 +2,7 @@
 <div class="container">  
 <div class="container">
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -29,6 +30,8 @@ Tools <span class="caret"></span></a>
                 <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="/tools/start-health-assessment">Take Clinical Trial Assessment</a></li>
               </ul>
             </li>
             <li class="dropdown">
