--- a/views/tools/start_assessment.handlebars
+++ b/views/tools/start_assessment.handlebars
@@ -8,7 +8,7 @@
       <div class="panel panel-default">
         <div class="panel-body">
         <h2>SEE IF YOU QUALIFY FOR A STARGARDTS TRIAL</h2>
-        <img src="/assets/images/stemcells-purple.png">
+        {{!-- <img src="/assets/images/stemcells-purple.png"> --}}
         </div>
     </div>
       <img>
@@ -25,7 +25,7 @@
             <p class="lead">
             By answering the questions in this assessment you will be able to match with life changing clinical trials. 
 
-            The average time to complete this assessment is 5-6 minutes.
+            The average time to complete this assessment is 2-5 minutes.
 
            
 
