--- a/views/tools/amsler_test_page.handlebars
+++ b/views/tools/amsler_test_page.handlebars
@@ -65,9 +65,13 @@
                   <tbody>
                     <tr>
 
-                        <td class="info .sr-only">{{dateCreated}}</td>
-                        <td class="info .sr-only">{{usernote}}</td>
+                      <td class="info .sr-only">{{dateCreated}}</td>
+                      <td class="info .sr-only">{{usernote}}</td>
+                      
+                      <form action="/delete-note/{{this._id}}?_method=DELETE" method="POST">
+
                         <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-target="#delete" id="delete-note"><span class="glyphicon glyphicon-trash"></span></button></p></td>
+                      </form>
                     </tr>
                   </tbody>
                 </table>
