--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,24 +39,27 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-        <section id="intro" class="intro-section">
-                <header class="what-is-header">
-                <h2 class="what-is-h2">What is Cesarcells.com?</h2>
-                </header>
-                <p>
-                Cesarcells.com helps you find cutting edge clinical trials. 
+                <section id="intro" class="intro-section">
 
-                 It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
+                    <header class="what-is-header">
+                    <h2 class="what-is-h2">What is Cesarcells.com?</h2>
+                    </header>
+                        <p>
+                        Cesarcells.com helps you find cutting edge clinical trials. 
 
-               We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
-                </p> <br>
-                <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
-                <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
+                        It is an independent resource on Stargardts disease as well as other Age Related Macular Degeneration (ARMD) eye diseases. 
+
+                        We are not affiliated in any way with any medical company and we have a team of health professionals analyzing the full body of research.
+                        </p> <br>
+
+                        <p class="what-is-sci"><strong>We currently have over 8 ARMD clinical trials and references to scientific research.</strong></p>
+                        
+                        <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn More About Us</a>
             
+                </section>
             </div>
         </div>
     </div>
-</section>
 
 <!-- How it works Section -->
 <A name="how-it-work-main"></A>
@@ -64,7 +67,7 @@
   <div class="col-lg-12">
     <section id="how-it-works" class="how-it-works-section">
       <header class="what-is-header">
-        <h2 class="how-it-works-h2">How It Works</h2>
+        <h2 class="how-it-works-h2-top">How It Works</h2>
       </header>
        <div class="col-md-4">
             <h2 class="how-it-works-h2">   Take Our <br>Assessment </h2>
@@ -89,6 +92,8 @@
 
 <A name="tools-main"></A>
 <div class="row">
+<div class="col-lg-12">
+
     <section id="tools" class="tools-section">
       <header class="tools-h2"> TOOLS
       </header>
@@ -102,7 +107,7 @@
             <img src=""/>
             </div>
 
-        </div>
+    </div>
         <div class="col-md-6">
             <div class="tools-image">
             <h2 class="tool-main-h2-CTQ"> <span class="glyphicon glyphicon-check" aria-hidden="true"></span>        Clinical Trial Qualifier</h2>
@@ -111,12 +116,10 @@
           
 
             <img src="">
-            
-            </div>
-
         </div>
     </div>
     </section>
+    </div>
   </div>
 
 <!-- Treatments Section -->
