--- a/views/resources/clinical_trial_descr.handlebars
+++ b/views/resources/clinical_trial_descr.handlebars
@@ -3,7 +3,7 @@
         <h1 class="main-h1"> Clinical Trials 
         </h1> 
         
-        <h1 style="text-align: center; color: white"> Find out more info below </h1>
+        <h1 style="text-align: center; color: white"> Clinical Trial Phases </h1>
             
     <div class="col-md-6">
     </div>
