--- a/views/resources/story_cesar.handlebars
+++ b/views/resources/story_cesar.handlebars
@@ -3,7 +3,7 @@
         
         <h1 class="main-h1"> Cesar's Story 
         <p class="what-is-sci"><strong></strong></p>
-            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a>
+            <a href="/users/sign-in" type="submit" class="btn btn-primary" id="cesar-btn" style="width: 400px; height: 60px; padding: 18px">CLICK TO LEARN MORE</a>
         </h1> 
         
         
@@ -12,7 +12,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <section id="intro" class="intro-section">
+    <section id="" class="">
       <header class="what-is-header">
         <h2 class="what-is-h2">Story</h2>
       </header>
@@ -27,4 +27,5 @@
          He no longer could decipher faces as his central vision has significantly degenerated and often times had to explain himself when people approached him having thought he'd ignored them. Before the development of his disease, he was the social lite of the party. Everywhere he went he made many friends. He was independent. He was confident. He was strong. Suddenly, he had to depend on his family to drive everywhere, to read, to essentially be his eyes for him. His daughter, refusing to accept that this was her father's fate, continued to search for clinical trials that he could qualify for and found SCOTS. An expensive treatment one that was experimental naturally caused Cesar and his family to feel some apprehension but alas decided that trying and failing was better than not trying at all. It's been three months since his procedure, and his vision has already improved. They are subtle improvements but milestones for him nonetheless. He can sign his own receipts as he now sees the line, his aim has markedly improved while eating as well as picking things off the floor that he could not see before.. All things we take for granted. Cesar and his family have faith that his vision will continue to make significant strides and hope that he will be able to drive once more. </p><br>
       
     </section>
+  </div>
   </div>
