--- a/views/resources/whats_stargardts.handlebars
+++ b/views/resources/whats_stargardts.handlebars
@@ -3,7 +3,7 @@
         <h1 class="main-h1"> What's Stargardt Disease? 
         </h1> 
         
-        <h1 style="text-align: center; color: white"> Find out more info below </h1>
+        <h1 style="text-align: center; color: white">  </h1>
             
     <div class="col-md-6">
     </div>
