--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-footer"> 
-  
+    <a href="/contact_us/contact">Contact Us</a>
   </div>
   <a id="priv-policy" target="_blank" href="#">Privacy Policy</a> <a id="terms-conditions" target="_blank" href="#">Terms and Conditions.</a> 
 </div>
