--- a/views/tools/all_trials.handlebars
+++ b/views/tools/all_trials.handlebars
@@ -5,9 +5,9 @@
 <div>
  <div class="row">
      <div class="col-md-9">
-         <h1 class="what-is-h2" style="text-align: center; color: midnightblue; margin-top: 50px">BROWSE OUR TRIALS</h1><br>
-         <label style="margin-left: 100px; color: cornflowerblue 
-">Quick Search: <input id="search" type="text" style="width: 500px; height: 75px; border-width: 5px; border-color: cornflowerblue; margin-top: 100px"></label>
+         <h1 class="what-is-h2" style="text-align: center; color: midnightblue; margin-top: 80px">BROWSE TRIALS</h1><br>
+         <label style="margin-left: 100px; color: midnightblue 
+">Search <input id="search" type="text" style="width: 700px; height: 45px; border-color: midnightblue; margin-top: 100px"></label>
 
              {{#each data.trials}}
              <table id="gene-table" class="table table-striped gene">
