--- a/views/users/assessment_results.handlebars
+++ b/views/users/assessment_results.handlebars
@@ -7,6 +7,7 @@
               <th>Trial ID</th>
               <th>Your Points</th>
               <th>Qualifying Points</th>
+
           </tr>
         </thead>
         <tbody>
@@ -14,48 +15,56 @@
               <td class="td-trials">{{scores.0.trial_id}}</td>
               <td class="td-trials">{{scores.0.points}}</td>
               <td class="td-trials">6</td>
+              <td class="td-trials"><a href="/clinical-trials/zero" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">{{scores.1.trial_id}}</td>
               <td class="td-trials">{{scores.1.points}}</td>
               <td class="td-trials">8</td>
+              <td class="td-trials"><a href="/clinical-trials/one" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
              
           </tr>
           <tr>
               <td class="td-trials">{{scores.2.trial_id}}</td>
               <td class="td-trials">{{scores.2.points}}</td>
               <td class="td-trials">3</td>
+              <td class="td-trials"><a href="/clinical-trials/two" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">{{scores.3.trial_id}}</td>
               <td class="td-trials">{{scores.3.points}}</td>
               <td class="td-trials">1</td>
+              <td class="td-trials"><a href="/clinical-trials/three" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">{{scores.4.trial_id}}</td>
               <td class="td-trials">{{scores.4.points}}</td>
               <td class="td-trials">1</td>
+              <td class="td-trials"><a href="/clinical-trials/four" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">5</td>
               <td class="td-trials">0</td>
               <td class="td-trials">0</td>
+              <td class="td-trials"><a href="/clinical-trials/five" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">{{scores.5.trial_id}}</td>
               <td class="td-trials">{{scores.5.points}}</td>
               <td class="td-trials">5</td>
+              <td class="td-trials"><a href="/clinical-trials/six" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
           <tr>
               <td class="td-trials">{{scores.6.trial_id}}</td>
               <td class="td-trials">{{scores.6.points}}</td>
               <td class="td-trials">3</td>
+              <td class="td-trials"><a href="/clinical-trials/seven" class="btn convo-btn pull-right btn btn-primary ask"><i class="fa fa-comments-o" aria-hidden="true"></i>    Ask about this trial</a></td>
 
           </tr>
         </tbody>
