--- a/views/users/sign_up.handlebars
+++ b/views/users/sign_up.handlebars
@@ -1,12 +1,12 @@
 <section id='userRegister'>
-  <div id='userForm'>
+  <div class="row">
   <br>
-  <h1>Welcome to the sign-up page!</h1>
-    <form class='create-update-form' action="/users/sign_up" method="post" autocomplete="on">
-    
+  <div class="col-md-6">
     <p>Login or Register with:</p>
 
             <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a><br><br><br>
+    <form class='create-update-form' action="/users/sign_up" method="post" autocomplete="on">
+    
 
     <h3> Sign Up, it's free</h3>
 
@@ -40,6 +40,19 @@
       <br> 
       <p> By registering you are agreeing to our <a target="_blank" href="#">Privacy Policy</a> and <a target="_blank" href="#">Terms and Conditions.</a> </p>
     </form>
+  </div>
   <br>
+  <div class="col-md-6">
+
+    <h1>With your <strong>free</strong> CesarCells account you can:</h1><br>
+      <ul class="list-group">
+        <li class="list-group-item"><span class="glyphicon glyphicon-check" aria-hidden="true"></span>          Match with clinical trials you qualify for</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>          Find treatments based on your genetics</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>          Have your 23AndMe genetic data analyzed for ARMD mutations</li><br>
+        <li class="list-group-item"><span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>          Stay updated on the latest Stargardt disease research</li><br>
+        <li class="list-group-item"> <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>          Given your own personal dashboard</li><br>
+      </ul><br>
+    
+  </div>
   </div>
 </section>
