--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -23,10 +23,6 @@
               <a href="#" class="dropdown-toggle" id="a-dash-one" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-cogs" aria-hidden="true"></i>
 Tools <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="dLabel">
-                <li><a href="#">All Tools</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="/tools/all-trials">Find a Clinical Trial</a></li>
-                <li role="separator" class="divider"></li>
                 <li><a href="/tools/genetic">23AndMe SNP Table</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/tools/amsler-test">Take The Amsler Test</a></li>
@@ -36,16 +32,15 @@ Tools <span class="caret"></span></a>
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" id="a-dash-three"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-eye" aria-hidden="true"></i>
-Treatments <span class="caret"></span></a>
+Trials <span class="caret"></span></a>
                 <ul class="dropdown-menu" aria-labelledby="dLabel">
-                    <li><a href="/tools/all-trials">Browse Treatments</a></li>
+                    <li><a href="/tools/all-trials">Browse Trials</a></li>
                 </ul>
             </li>
             <li class="dropdown">
             <a href="/users/sign-in" class="" id="a-dash-four" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-user" aria-hidden="true"></i>
 My Account </a>
               <ul class="dropdown-menu">
-                <li role="separator" class="divider"></li>
                 <li><a href="/users/dashboard">Dashboard</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">My Profile</a></li>
