--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <span>
     
         <h1 class="main-h1"> CESARCELLS 
-        <p class="what-is-sci"><strong>LIFE CHANGING STARGARDT TREATMENTS!</strong></p>
+        <p class="what-is-sci"><strong>YOUR AGE RELATED MACULAR DEGENERATION RESOURCE!</strong></p>
             <a href="/users/sign-in" type="submit" class="btn btn-primary" id="main-btn" style="width: 200px; height: 60px; padding: 18px">JOIN</a>
         </h1> 
         
