--- a/views/contactus/contact_us.handlebars
+++ b/views/contactus/contact_us.handlebars
@@ -1,7 +1,7 @@
 
-<form action="/contact_us/send" method="post">
+<form action="/contact_us/send" method="post" style="margin-top: 150px">
 
-    <h2>Contact Us:</h2>
+    <h2 style="text-align: left">Contact Us:</h2>
     <label>Name: <input type="text" name="name" size="30" maxlength="100" placeholder="Your Name..."></label><br />
     <label>Email: <input type="email" name="email" size="30" maxlength="100" placeholder="Your Email..."></label><br />
     <p>
