--- a/views/partials/main-nav.handlebars
+++ b/views/partials/main-nav.handlebars
@@ -8,12 +8,11 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"><i class="fa fa-audio-description" aria-hidden="true">Highlight Text To Enable Speech</i>
-</span>
+            <span class="icon-bar"><i class="fa fa-audio-description" aria-hidden="true">Highlight Text To Enable Speech</i></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" id="cesar-logo" href="/">CesarCells</a>
+          <a class="navbar-brand" id="cesar-logo" href="/"><img src="/assets/images/cesarcells.jpg" style="height: 50px; width: 75px; margin-bottom: 50px; background-color: tranparent"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
